--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, reprehenderit beatae neque quasi ipsum
             error vel repellat, a natus, quod illo delectus ab. Necessitatibus vero minus consequuntur cum blanditiis
             unde?</p>
-            <img src="foto.jpg" alt="Żarówka" width="20%" height="20%">
+            <img src="foto.jpg" alt="Żarówka" width="450" height="300">
 
 
     </article>
